proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/func_return_nothing.py
def f():
    return
print "hi"
