proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/expr_lambda.py
def hi():
	return lambda x: 1

print hi()(5)
